# kitchensound

./: .gitignore  CMakeLists.txt  config.conf  cross-build.sh  readme.md  setup.md  todo.md
dtoverlay/: rpi_spi_tft_22-overlay.dts
include/kitchensound/: analytics_logger.h  application_backbone.h  bt_controller.h  cache_manager.h  config.h  enum_helper.h  fd_registry.h  file_playback.h  gpio_util.h  init_system_conns.h  input.h  input_event.h  menu_model.h  model.h  mpd_controller.h  network_controller.h  os_util.h  radio_station_stream.h  render_page.h  render_text.h  renderer.h  resource_manager.h  running.h  sdl_util.h  snapcast_controller.h  song.h  song_faver.h  sound_file_playback.h  standby.h  state_controller.h  station_image_cache.h  time_based_standby.h  timeouts.h  timer.h  timer_manager.h  version.h  volume.h
include/kitchensound/pages/: base_page.h  bt_playing_page.h  inactive_page.h  loading_page.h  menu_selection_page.h  options_page.h  page_loader.h  pages.h  playing_page.h  selection_page.h  snapcast_playing_page.h  station_browsing_page.h  station_playing_page.h  station_selection_page.h  volume_page.h
res/bluetoothd/: _main.conf
res/dbus/: _kitchensound.bt.dbus.conf
res/img/: image_license.txt
res/polkit/: _allow_pi_shutdown_reboot.pkla
res/scripts/: _bt_off.sh  _bt_on.sh
res/sound/: sound_fetcher.sh
res/systemd/: _bluealsa-aplay.service  _bt-agent.service  _bthelper_overide.service  _kitchensound.service
src/: analytics_logger.cpp  application_backbone.cpp  bt_controller.cpp  cache_manager.cpp  config.cpp  fd_registry.cpp  file_playback.cpp  gpio_util.cpp  init_system_conns.cpp  input.cpp  main.cpp  mpd_controller.cpp  network_manager.cpp  os_util.cpp  render_page.cpp  render_text.cpp  renderer.cpp  resource_manager.cpp  sdl_util.cpp  snapcast_controller.cpp  song.cpp  song_faver.cpp  sound_file_playback.cpp  standby.cpp  state_controller.cpp  station_image_cache.cpp  time_based_standby.cpp  timer.cpp  timer_manager.cpp  version.cpp  volume.cpp
src/pages/: base_page.cpp  bt_playing_page.cpp  inactive_page.cpp  loading_page.cpp  menu_selection_page.cpp  options_page.cpp  page_loader.cpp  pages.cpp  playing_page.cpp  selection_page.cpp  snapcast_playing_page.cpp  station_browsing_page.cpp  station_playing_page.cpp  station_selection_page.cpp  volume_page.cpp
